--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -17,6 +17,7 @@ DIVERSIONS_LOCAL=/etc/livenet/diversions.conf
 UPDATE_FLAG=/etc/livenet/local/current_update
 ZFSPOOL=LNPOOL
 ZFSROOT=VROOT
+LIVENET_RELEASES_MNT=/tmp/.releases
 #SHUTDOWN_HOUR="04:00:00"
 
 ZONEINFO=Europe/Rome
@@ -296,22 +297,19 @@ mount_livenet_root() {
     echo
 }
 
-
 mount_livenet_releases() {
-    backupmnt=/tmp/.backup
-    mkdir -p ${backupmnt}
+    mkdir -p ${LIVENET_RELEASES_MNT}
 
-    mountpoint -q ${backupmnt} && umount ${backupmnt}
+    mountpoint -q ${LIVENET_RELEASES_MNT} && umount ${LIVENET_RELEASES_MNT}
     BACKUPSERVER=${LIVENET_ROOT%%:*}
-    echo "Try to mount from ${BACKUPSERVER}:${BACKUP} ..."
-    mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144 ${BACKUPSERVER}:${BACKUP} ${backupmnt}
-    mountpoint -q ${backupmnt} || (
-        echo "Error to mount $BACKUPSERVER, skip upgrade"
+    echo "Mounting ${BACKUPSERVER}:${BACKUP} on ${LIVENET_RELEASES_MNT}"
+    mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144 ${BACKUPSERVER}:${BACKUP} ${LIVENET_RELEASES_MNT}
+    mountpoint -q ${LIVENET_RELEASES_MNT} || (
+        echo "ERROR: skip upgrade"
         return 1
     )
-    #archive=$(ls ${backupmnt}/*-diff.tar.* | tail -n1)
+    #archive=$(ls ${LIVENET_RELEASES_MNT}/*-diff.tar.* | tail -n1)
 }
-
 
 sync_overlay() {
     echo "Sync remote overlay ..."
@@ -356,6 +354,7 @@ export DEVICE
 export LIVENET_ROOT
 export LIVENET_ROOT_IP
 export LIVENET_DEBUG
+export LIVENET_RELEASES_MNT
 export ROOT
 export NFSOPTS
 export NFSOPTSV4
