--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -18,6 +18,7 @@ UPDATE_FLAG=/etc/livenet/local/current_update
 ZFSPOOL=LNPOOL
 ZFSROOT=VROOT
 LIVENET_RELEASES_MNT=/tmp/.releases
+DNS=8.8.4.4
 #SHUTDOWN_HOUR="04:00:00"
 
 ZONEINFO=Europe/Rome
@@ -26,7 +27,7 @@ SWAP_SIZE=1000  #MByte
 FLAG_VERSION="/etc/livenet/version"
 FLAG_NFS=/var/cache/livenet/nfs
 NFSOPTS="vers=3,retrans=10,nolock,rsize=32768,wsize=32768,async,noatime,hard,intr"
-NFSOPTSV4="vers=4,nolock,timeo=20,soft,retry=0"
+NFSOPTSV4="vers=4,nolock,timeo=5,soft,retry=0"
 #NFSOPTSV4="vers=4,proto=tcp,timeo=20,soft,retry=0"
 NFSRO=ro
 XKBLAYOUT=it
