fix sync overlay

--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -315,8 +315,8 @@ mount_livenet_releases() {
 sync_overlay() {
     echo "Sync remote overlay ..."
     LIVENET_HOST=$( echo ${LIVENET_ROOT} | awk -F ':' '{ print $1 }' )
-    rsync -a ${LIVENET_HOST}::overlay/etc/ etc/
-    rsync -a ${LIVENET_HOST}::overlay/usr/ usr/
+    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/etc/ etc/
+    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/usr/ usr/
 }
 
 # used in ln-client, ln-vms
