--- a/node/Taskfile.yml
+++ b/node/Taskfile.yml
@@ -110,6 +110,12 @@ tasks:
         qemu-system-x86_64 -nographic -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=livenet,id=net0 \
           -drive id=vda,file=${DISK} \
           -boot n
+
+  vm:spice:
+    desc: "spice client"
+    cmds:
+      - sleep 1
+      - spicy -h localhost -p 5900
   
   vm:bios:local:
     desc: "boot vm in uefi: see 4.3 on https://wiki.archlinux.org/title/QEMU"
@@ -117,8 +123,14 @@ tasks:
       - task: vm:disk
       - |
         qemu-system-x86_64 -nographic -smp 2 -m 2048 -enable-kvm -net nic,netdev=net0 -netdev bridge,br=livenet,id=net0 \
+          -spice port=5900,addr=0.0.0.0,disable-ticketing \
           -drive id=vda,file=${DISK} \
           -boot d
+
+  vm:
+    desc: "boot local disk vm with spice client"
+    deps: [vm:spice, vm:bios:local]
+
 
   vm:cd:
     desc: "boot systemrescuecd"
