--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -88,7 +88,7 @@ lens_off=gdocs.scope
 roottmppath=/tmp/.${ROOT_LABEL}
 
 mount_root() {
-    echo "Mounting root..."
+    echo "Mounting root... ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
 
     mkdir -p ${roottmppath}
     umount ${roottmppath} >/dev/null 2>&1
@@ -329,7 +329,7 @@ do_setbg() {
     xset -dpms
     xset s noblank
 }
-
+echo "Loading config..."
 for conf in \
     /etc/initramfs-tools/initramfs.conf \
     /etc/initramfs-tools/scripts/functions-livenet \
@@ -349,6 +349,10 @@ PROFILE=${PROFILE:=default}
 
 RELEASE=${LIVENET_ROOT##*/}
 FLAG_RELEASE="/etc/livenet/release_${RELEASE}"
+
+echo "\n\n!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+echo "RELEASE: ${RELEASE}"
+echo "GLAG_RELEASE: ${FLAG_RELEASE}\n\n"
 
 export PROFILE
 export DEVICE
