--- a/node/overlay/boot/grub.cfg
+++ b/node/overlay/boot/grub.cfg
@@ -10,7 +10,7 @@ set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 set timeout=5
 
-menuentry "Ubuntu 22.04 - live" {
+menuentry "Ubuntu 22.04 (Jammy) - live" {
   set gfxpayload=keep
   linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default net.ifnames=0 biosdevname=0
   initrd /initrd.img
