--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -79,6 +79,10 @@ RUN cp -rf /usr/lib/grub/i386-pc ${TFTP_ROOT}/grub-node \
 # minihttpd
 EXPOSE 8095/tcp
 
+# tftp
+EXPOSE 67/udp
+EXPOSE 69/udp
+
 ########################################################
 ####### NFS ############################################
 ########################################################
