Inserito 'install' in grub

--- a/node/overlay/boot/grub.cfg
+++ b/node/overlay/boot/grub.cfg
@@ -16,6 +16,14 @@ menuentry "Ubuntu 22.04 (Jammy) - live" {
   initrd /initrd.img
 }
 
+menuentry "Ubuntu 22.04 (Jammy) - install" {
+  set gfxpayload=keep
+  linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default livenet_action=install livenet_action_end=halt net.ifnames=0 biosdevname=0
+  initrd /initrd.img
+}
+
+
+
 # menuentry "Local disk" {
 #     insmod chain
 #     search --set=root --file /EFI/centos/grubx64.efi
