--- a/node/boot_config/grub.cfg
+++ b/node/boot_config/grub.cfg
@@ -12,13 +12,13 @@ set timeout=5
 
 menuentry "Ubuntu 22.04 (Jammy) - live" {
   set gfxpayload=keep
-  linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default net.ifnames=0 biosdevname=0
+  linux /vmlinuz ro livenet_root=_server_ip_:/ boot=livenet livenet_profile=default net.ifnames=0 biosdevname=0
   initrd /initrd.img
 }
 
 menuentry "Ubuntu 22.04 (Jammy) - install" {
   set gfxpayload=keep
-  linux /vmlinuz ro livenet_root=192.168.124.1:/ boot=livenet livenet_profile=default livenet_action=install livenet_action_end=halt net.ifnames=0 biosdevname=0
+  linux /vmlinuz ro livenet_root=_server_ip_:/ boot=livenet livenet_profile=default livenet_action=install livenet_action_end=halt net.ifnames=0 biosdevname=0
   initrd /initrd.img
 }
 
