Aggiunti profili lightdm
SOno da verificare in università

--- a/node/overlay/etc/lightdm/lightdm.conf
+++ b/node/overlay/etc/lightdm/lightdm.conf
@@ -1,6 +1,1 @@
-[Seat:*]
-greeter-session=web-greeter
-greeter-hide-users=true
-allow-guest=false
-user-session=ubuntu
-
+/etc/alternatives/lightdm.conf
