--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -2,6 +2,8 @@
 # Changes to this file requires an initramfs update
 
 #RELEASE=quantal-gamma
+SYSLOG_IP=192.168.124.1
+SYSLOG_PORT=5140
 LIVENET_ROOT_IP=0.0.0.0
 KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//')
 STATENFS=/states                   # nfs share that holds states
@@ -89,23 +91,28 @@ roottmppath=/tmp/.${ROOT_LABEL}
 
 mount_root() {
     echo "Mounting root... ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Mounting Root"
 
     mkdir -p ${roottmppath}
     umount ${roottmppath} >/dev/null 2>&1
     mount -o barrier=0,noatime,nodiratime LABEL=${ROOT_LABEL} ${roottmppath} 2>/dev/null
     if [ $? != 0 ]; then
         echo "ABORT: cannot mount root partition"
+        logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "ABORT: cannot mount root partition"
+        
         exit 1
     fi
 }
 
 umount_root() {
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Unmount root"
     umount -f ${roottmppath}/* >/dev/null 2>&1
     umount -f ${roottmppath} >/dev/null 2>&1 && rmdir ${roottmppath}
 }
 
 log_error() {
     echo "ERROR: $@" >&2
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "ERROR: $@"
 }
 
 PID_LOGX=
@@ -304,9 +311,11 @@ mount_livenet_releases() {
     mountpoint -q ${LIVENET_RELEASES_MNT} && umount ${LIVENET_RELEASES_MNT}
     BACKUPSERVER=${LIVENET_ROOT%%:*}
     echo "Mounting ${BACKUPSERVER}:${BACKUP} on ${LIVENET_RELEASES_MNT}"
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Mounting ${BACKUPSERVER}:${BACKUP} on ${LIVENET_RELEASES_MNT}"
     mount -o vers=4,proto=tcp,ro,timeo=30,retry=0,soft,rsize=262144 ${BACKUPSERVER}:${BACKUP} ${LIVENET_RELEASES_MNT}
     mountpoint -q ${LIVENET_RELEASES_MNT} || (
         echo "ERROR: skip upgrade"
+        logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "ERROR: skip upgrade"
         return 1
     )
     #archive=$(ls ${LIVENET_RELEASES_MNT}/*-diff.tar.* | tail -n1)
@@ -314,9 +323,12 @@ mount_livenet_releases() {
 
 sync_overlay() {
     echo "Sync remote overlay ..."
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Sync Remote Overlay"
+
     LIVENET_HOST=$( echo ${LIVENET_ROOT} | awk -F ':' '{ print $1 }' )
     rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/etc/ etc/
     rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/usr/ usr/
+    logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Syncing Done"
 }
 
 # used in ln-client, ln-vms
