Aggiunti files da vecchia livenet

--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -326,8 +326,8 @@ sync_overlay() {
     logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Sync Remote Overlay"
 
     LIVENET_HOST=$( echo ${LIVENET_ROOT} | awk -F ':' '{ print $1 }' )
-    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/etc/ etc/
-    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/usr/ usr/
+    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/etc/ /etc/
+    rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/usr/ /usr/
     logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Syncing Done"
 }
 
