--- a/node/overlay/etc/rsyncd.conf
+++ b/node/overlay/etc/rsyncd.conf
@@ -1,8 +1,7 @@
-use chroot = true
+#use chroot = true
 max connections = 20
-
 [overlay]
     path = /mnt/overlay
     comment = overlay area
-    read only = true
+#    read only = true
     timeout = 300
