--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -1,7 +1,6 @@
 # Stateless configuration for initramfs and maintenance scripts
 # Changes to this file requires an initramfs update
 
-#RELEASE=quantal-gamma
 SYSLOG_IP=192.168.124.1
 SYSLOG_PORT=5140
 LIVENET_ROOT_IP=0.0.0.0
@@ -26,7 +25,7 @@ DNS=8.8.4.4
 ZONEINFO=Europe/Rome
 ROOT_SIZE=20000 #MByte, utilizzato solo nel caso di ridimensionamento di partizioni esistenti
 SWAP_SIZE=1000  #MByte
-FLAG_VERSION="/etc/livenet/version"
+FLAG_RELEASE="/etc/livenet/release"
 FLAG_NFS=/var/cache/livenet/nfs
 NFSOPTS="vers=3,retrans=10,nolock,rsize=32768,wsize=32768,async,noatime,hard,intr"
 NFSOPTSV4="vers=4,nolock,timeo=5,soft,retry=0"
@@ -318,6 +317,17 @@ sync_overlay() {
 
     LIVENET_HOST=$( echo ${LIVENET_ROOT} | awk -F ':' '{ print $1 }' )
     rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/etc/ /etc/
+
+    # Escludo /etc/livenet/boot/ perché non voglio che mi cambi i permessi di esecuzione di
+    # questa directory
+    # NOTA BENE: si potrebbe usare una lista di esclusione, es --exclude-from=./exclude_list
+    # se in futuro si dovesse applicare più volte lo stesso criterio
+    ##rsync -a --chown=0:0 --exclude=overlay/etc/livenet/boot/ ${LIVENET_HOST}::overlay/etc/ /etc/
+    # E' l'equivalente di -a lasciando alterati i permessi sulla destinazione
+    # eventuali nuovi files assumono il permesso dell'origine
+    ##rsync -rltgoDu --chown=0:0 ${LIVENET_HOST}::overlay/etc/livenet/boot /etc/livenet/
+    
+    
     rsync -a --chown=0:0 ${LIVENET_HOST}::overlay/usr/ /usr/
     logger -n ${SYSLOG_IP} -P ${SYSLOG_PORT} -t "Livenet" "Syncing Done"
 }
