--- a/node/overlay/etc/lightdm/web-greeter.yml
+++ b/node/overlay/etc/lightdm/web-greeter.yml
@@ -28,7 +28,7 @@ greeter:
     detect_theme_errors: True
     screensaver_timeout: 300
     secure_mode: True
-    theme: dracula
+    theme: univr
     icon_theme:
     time_language:
 
