--- a/node/overlay/etc/rsyncd.conf
+++ b/node/overlay/etc/rsyncd.conf
@@ -5,3 +5,8 @@ max connections = 20
     comment = overlay area
 #    read only = true
     timeout = 300
+[version]
+  path = /etc/livenet
+  comment = for the curent server version
+  read only = true
+  timeout = 300
