--- a/node/overlay/etc/livenet/livenet.conf
+++ b/node/overlay/etc/livenet/livenet.conf
@@ -3,7 +3,7 @@
 
 SYSLOG_IP=192.168.124.1
 SYSLOG_PORT=5140
-LIVENET_ROOT_IP=0.0.0.0
+LIVENET_ROOT_IP=$(ip route | awk  '/default/ { print $3 }')
 KERNEL=$( (readlink /boot/initrd.img || readlink /initrd.img) | sed -e 's/^.*initrd.img-//')
 STATENFS=/states                   # nfs share that holds states
 BACKUP=/mnt/releases/                   # nfs share that holds backup
@@ -361,7 +361,9 @@ parse_kernel_args
 PROFILE=${PROFILE:=default}
 
 RELEASE=${LIVENET_ROOT##*/}
-FLAG_RELEASE="/etc/livenet/release_${RELEASE}"
+#FLAG_RELEASE="/etc/livenet/release_${RELEASE}"
+FLAG_RELEASE="/etc/livenet/release"
+
 
 export PROFILE
 export DEVICE
